[gd_scene load_steps=15 format=4 uid="uid://3ksm7d0pb7w7"]

[ext_resource type="Script" uid="uid://6p1ql1rv6dlc" path="res://scripts/utilities/title_screen.gd" id="1_d7vvv"]
[ext_resource type="PackedScene" uid="uid://bdem6pkqjpo87" path="res://scenes/utilities/key_bindings.tscn" id="2_nd2c7"]
[ext_resource type="PackedScene" uid="uid://hu68fs8f8nx5" path="res://scenes/utilities/tile_map_layer.tscn" id="3_7rifs"]
[ext_resource type="PackedScene" uid="uid://ckg76mq128fgd" path="res://scenes/entities/player/player.tscn" id="4_pfkfe"]
[ext_resource type="Texture2D" uid="uid://brspnxpiedrg4" path="res://assets/graphics/ui/backgrounds/title_screen.png" id="5_gemfs"]
[ext_resource type="Texture2D" uid="uid://dtpts1yn22bv2" path="res://assets/graphics/ui/buttons/play.png" id="6_jgewu"]
[ext_resource type="Texture2D" uid="uid://c57bd3vsap4uw" path="res://assets/graphics/ui/buttons/play_hovered.png" id="7_mcgve"]
[ext_resource type="Texture2D" uid="uid://h3xk0kdxrunf" path="res://assets/graphics/ui/buttons/website.png" id="8_ahfes"]
[ext_resource type="Texture2D" uid="uid://ucswo5s818gm" path="res://assets/graphics/ui/buttons/website_hovered.png" id="9_q3v7w"]
[ext_resource type="Texture2D" uid="uid://dvwur2b1ry6cn" path="res://assets/graphics/ui/buttons/audio.png" id="10_7mhvy"]
[ext_resource type="Texture2D" uid="uid://dcq6dk2yx0icj" path="res://assets/graphics/ui/buttons/audio_hovered.png" id="11_yoqw2"]
[ext_resource type="Texture2D" uid="uid://c6y2jnyn5tcrv" path="res://assets/graphics/ui/buttons/fullscreen.png" id="12_1b8ls"]
[ext_resource type="Texture2D" uid="uid://db3glf5mccaw3" path="res://assets/graphics/ui/buttons/fullscreen_hovered.png" id="13_x6dtl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jyisb"]
texture = ExtResource("5_gemfs")

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_d7vvv")

[node name="KeyBindings" parent="." instance=ExtResource("2_nd2c7")]

[node name="Background" type="Node2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(4, 4)

[node name="TileMapLayer" parent="Background" instance=ExtResource("3_7rifs")]
tile_map_data = PackedByteArray("AAD//wAAAQABAAIAAAAAAP//AQABAAIAAAABAP//AQABAAIAAAACAP//AQABAAIAAAADAP//AQABAAIAAAAEAP//AQABAAIAAAAAAAAAAQABAAIAAAAAAAEAAQABAAAAAAAAAAIAAQAAAAEAAAAAAAMAAQAAAAEAAAAAAAQAAQAAAAEAAAABAAQAAQAAAAEAAAACAAQAAQAAAAEAAAADAAQAAQAAAAEAAAAEAAQAAQAAAAEAAAAEAAMAAQAAAAEAAAAEAAIAAQAAAAEAAAAEAAEAAQABAAAAAAAEAAAAAQABAAIAAAADAAAAAQABAAIAAAACAAAAAQABAAIAAAABAAAAAQABAAIAAAABAAEAAQABAAAAAAABAAIAAQAAAAEAAAABAAMAAQAAAAEAAAACAAMAAQAAAAEAAAADAAMAAQAAAAEAAAADAAIAAQAAAAEAAAADAAEAAQABAAAAAAACAAEAAQABAAAAAAACAAIAAQAAAAEAAAD/////AQABAAIAAAD+////AQABAAIAAAD9////AQABAAIAAAD8////AQABAAIAAAD7////AQABAAIAAAD///3/AQAAAAEAAAD///7/AQAAAAAAAAD///z/AQAAAAEAAAD///v/AQAAAAEAAAD+//v/AQAAAAEAAAD9//v/AQAAAAEAAAD8//v/AQAAAAEAAAD7//v/AQAAAAEAAAD7//z/AQAAAAEAAAD7//3/AQAAAAEAAAD7//7/AQAAAAAAAAD8//7/AQAAAAAAAAD9//7/AQAAAAAAAAD9//3/AQAAAAEAAAD+//3/AQAAAAEAAAD+//z/AQAAAAEAAAD9//z/AQAAAAEAAAD8//z/AQAAAAEAAAD8//3/AQAAAAEAAAD+//7/AQAAAAAAAAAAAPv/AQAAAAEAAAABAPv/AQAAAAEAAAACAPv/AQAAAAEAAAADAPv/AQAAAAEAAAAEAPv/AQAAAAEAAAAEAPz/AQAAAAEAAAAEAP3/AQAAAAEAAAAEAP7/AQAAAAAAAAADAP7/AQAAAAAAAAADAP3/AQAAAAEAAAACAPz/AQAAAAEAAAABAPz/AQAAAAEAAAAAAPz/AQAAAAEAAAAAAP3/AQAAAAEAAAAAAP7/AQAAAAAAAAABAP7/AQAAAAAAAAACAP3/AQAAAAEAAAADAPz/AQAAAAEAAAABAP3/AQAAAAEAAAACAP7/AQAAAAAAAAD//wQAAQAAAAEAAAD+/wQAAQAAAAEAAAD9/wQAAQAAAAEAAAD8/wQAAQAAAAEAAAD7/wQAAQAAAAEAAAD7/wMAAQAAAAEAAAD7/wIAAQAAAAEAAAD7/wEAAQABAAAAAAD7/wAAAQABAAIAAAD8/wAAAQABAAIAAAD9/wAAAQABAAIAAAD9/wEAAQABAAAAAAD9/wIAAQAAAAEAAAD8/wIAAQAAAAEAAAD+/wAAAQABAAIAAAD8/wEAAQABAAAAAAD8/wMAAQAAAAEAAAD9/wMAAQAAAAEAAAD+/wMAAQAAAAEAAAD//wIAAQAAAAEAAAD+/wIAAQAAAAEAAAD+/wEAAQABAAAAAAD//wEAAQABAAAAAAD//wMAAQAAAAEAAAD6////AQABAAIAAAD6/wAAAQABAAIAAAD5////AQABAAIAAAD5/wAAAQABAAIAAAD4////AQABAAIAAAD4/wAAAQABAAIAAAD3////AQABAAIAAAD3/wAAAQABAAIAAAD2////AQABAAIAAAD2/wAAAQABAAIAAAAFAP//AQABAAIAAAAFAAAAAQABAAIAAAAGAP//AQABAAIAAAAGAAAAAQABAAIAAAAHAP//AQABAAIAAAAHAAAAAQABAAIAAAAIAP//AQABAAIAAAAIAAAAAQABAAIAAAAAAPr/AQAAAAEAAAD///r/AQAAAAEAAAAAAPj/AQAAAAEAAAD///f/AQAAAAEAAAAAAAUAAQAAAAEAAAD//wUAAQAAAAEAAAAAAAYAAQAAAAEAAAD//wYAAQAAAAEAAAAAAAcAAQAAAAEAAAD//wcAAQAAAAEAAAAAAAgAAQAAAAEAAAD//wgAAQAAAAEAAAAAAAkAAQAAAAEAAAD//wkAAQAAAAEAAAD+/wkAAQAAAAEAAAD+/wgAAQAAAAEAAAD+/wcAAQAAAAEAAAD+/wYAAQAAAAEAAAD+/wUAAQAAAAEAAAD9/wUAAQAAAAEAAAD8/wUAAQAAAAEAAAD7/wUAAQAAAAEAAAD7/wYAAQAAAAEAAAD7/wcAAQAAAAEAAAD7/wgAAQAAAAEAAAD7/wkAAQAAAAEAAAD8/wkAAQAAAAEAAAD9/wkAAQAAAAEAAAD9/wgAAQAAAAEAAAD9/wcAAQAAAAEAAAD9/wYAAQAAAAEAAAD8/wYAAQAAAAEAAAD8/wcAAQAAAAEAAAD8/wgAAQAAAAEAAAD6/wkAAQAAAAEAAAD5/wkAAQAAAAEAAAD4/wkAAQAAAAEAAAD3/wkAAQAAAAEAAAD2/wkAAQAAAAEAAAD2/wgAAQAAAAEAAAD2/wcAAQAAAAEAAAD2/wYAAQAAAAEAAAD2/wUAAQAAAAEAAAD2/wQAAQAAAAEAAAD2/wMAAQAAAAEAAAD2/wIAAQAAAAEAAAD2/wEAAQABAAAAAAD3/wEAAQABAAAAAAD4/wEAAQABAAAAAAD5/wEAAQABAAAAAAD6/wEAAQABAAAAAAD6/wIAAQAAAAEAAAD6/wMAAQAAAAEAAAD6/wQAAQAAAAEAAAD6/wUAAQAAAAEAAAD6/wYAAQAAAAEAAAD6/wcAAQAAAAEAAAD6/wgAAQAAAAEAAAD5/wgAAQAAAAEAAAD4/wgAAQAAAAEAAAD3/wgAAQAAAAEAAAD3/wcAAQAAAAEAAAD3/wYAAQAAAAEAAAD3/wUAAQAAAAEAAAD3/wQAAQAAAAEAAAD3/wMAAQAAAAEAAAD4/wMAAQAAAAEAAAD4/wIAAQAAAAEAAAD5/wIAAQAAAAEAAAD3/wIAAQAAAAEAAAD4/wQAAQAAAAEAAAD4/wUAAQAAAAEAAAD4/wYAAQAAAAEAAAD4/wcAAQAAAAEAAAD5/wcAAQAAAAEAAAD5/wYAAQAAAAEAAAD5/wUAAQAAAAEAAAD5/wQAAQAAAAEAAAD5/wMAAQAAAAEAAAABAAkAAQAAAAEAAAACAAkAAQAAAAEAAAADAAkAAQAAAAEAAAAEAAkAAQAAAAEAAAAFAAkAAQAAAAEAAAAGAAkAAQAAAAEAAAAHAAkAAQAAAAEAAAAIAAkAAQAAAAEAAAAIAAEAAQABAAAAAAAHAAEAAQABAAAAAAAGAAEAAQABAAAAAAAFAAEAAQABAAAAAAAFAAIAAQAAAAEAAAAFAAMAAQAAAAEAAAAGAAIAAQAAAAEAAAAIAAIAAQAAAAEAAAAHAAIAAQAAAAEAAAAFAAQAAQAAAAEAAAAGAAQAAQAAAAEAAAAIAAMAAQAAAAEAAAAHAAMAAQAAAAEAAAAGAAMAAQAAAAEAAAAHAAQAAQAAAAEAAAAIAAQAAQAAAAEAAAAIAAUAAQAAAAEAAAAIAAYAAQAAAAEAAAAIAAcAAQAAAAEAAAAIAAgAAQAAAAEAAAAHAAgAAQAAAAEAAAAHAAcAAQAAAAEAAAAGAAYAAQAAAAEAAAAGAAUAAQAAAAEAAAAGAAcAAQAAAAEAAAAGAAgAAQAAAAEAAAAHAAYAAQAAAAEAAAAHAAUAAQAAAAEAAAAFAAUAAQAAAAEAAAAEAAUAAQAAAAEAAAADAAUAAQAAAAEAAAACAAUAAQAAAAEAAAABAAUAAQAAAAEAAAABAAYAAQAAAAEAAAABAAcAAQAAAAEAAAABAAgAAQAAAAEAAAACAAgAAQAAAAEAAAADAAgAAQAAAAEAAAAEAAgAAQAAAAEAAAAFAAgAAQAAAAEAAAAFAAcAAQAAAAEAAAAFAAYAAQAAAAEAAAAEAAYAAQAAAAEAAAADAAYAAQAAAAEAAAACAAYAAQAAAAEAAAACAAcAAQAAAAEAAAADAAcAAQAAAAEAAAAEAAcAAQAAAAEAAAAFAP7/AQAAAAAAAAAFAP3/AQAAAAEAAAAFAPz/AQAAAAEAAAAFAPv/AQAAAAEAAAAFAPr/AQAAAAEAAAAFAPn/AQAAAAEAAAAEAPr/AQAAAAEAAAADAPr/AQAAAAEAAAACAPr/AQAAAAEAAAACAPb/AQAAAAEAAAADAPb/AQAAAAEAAAAEAPb/AQAAAAEAAAAFAPb/AQAAAAEAAAAGAPb/AQAAAAEAAAAHAPb/AQAAAAEAAAAIAPb/AQAAAAEAAAAIAP7/AQAAAAAAAAAHAP7/AQAAAAAAAAAGAP7/AQAAAAAAAAAGAP3/AQAAAAEAAAAGAPz/AQAAAAEAAAAGAPv/AQAAAAEAAAAGAPr/AQAAAAEAAAAGAPn/AQAAAAEAAAAGAPj/AQAAAAEAAAAGAPf/AQAAAAEAAAAFAPf/AQAAAAEAAAAEAPf/AQAAAAEAAAADAPf/AQAAAAEAAAACAPf/AQAAAAEAAAACAPn/AQAAAAEAAAADAPn/AQAAAAEAAAADAPj/AQAAAAEAAAAEAPj/AQAAAAEAAAAFAPj/AQAAAAEAAAAEAPn/AQAAAAEAAAAHAPj/AQAAAAEAAAAIAPj/AQAAAAEAAAAIAPf/AQAAAAEAAAAHAPf/AQAAAAEAAAAHAPn/AQAAAAEAAAAHAPr/AQAAAAEAAAAHAPv/AQAAAAEAAAAHAPz/AQAAAAEAAAAHAP3/AQAAAAEAAAAIAP3/AQAAAAEAAAAIAPz/AQAAAAEAAAAIAPv/AQAAAAEAAAAIAPr/AQAAAAEAAAAIAPn/AQAAAAEAAAD+//r/AQAAAAEAAAD9//r/AQAAAAEAAAD8//r/AQAAAAEAAAD7//r/AQAAAAEAAAD6//r/AQAAAAEAAAD6//v/AQAAAAEAAAD6//z/AQAAAAEAAAD6//3/AQAAAAEAAAD6//7/AQAAAAAAAAD5//7/AQAAAAAAAAD4//7/AQAAAAAAAAD3//7/AQAAAAAAAAD2//7/AQAAAAAAAAD2//3/AQAAAAEAAAD2//z/AQAAAAEAAAD2//v/AQAAAAEAAAD2//r/AQAAAAEAAAD2//n/AQAAAAEAAAD2//j/AQAAAAEAAAD2//f/AQAAAAEAAAD2//b/AQAAAAEAAAD3//b/AQAAAAEAAAD4//b/AQAAAAEAAAD5//b/AQAAAAEAAAD6//b/AQAAAAEAAAD7//b/AQAAAAEAAAD+//f/AQAAAAEAAAD9//n/AQAAAAEAAAD8//n/AQAAAAEAAAD7//n/AQAAAAEAAAD6//n/AQAAAAEAAAD5//j/AQAAAAEAAAD4//j/AQAAAAEAAAD4//f/AQAAAAEAAAD5//f/AQAAAAEAAAD6//f/AQAAAAEAAAD7//f/AQAAAAEAAAD3//f/AQAAAAEAAAD3//j/AQAAAAEAAAD3//n/AQAAAAEAAAD3//r/AQAAAAEAAAD3//v/AQAAAAEAAAD3//z/AQAAAAEAAAD3//3/AQAAAAEAAAD4//3/AQAAAAEAAAD5//3/AQAAAAEAAAD5//z/AQAAAAEAAAD5//v/AQAAAAEAAAD5//r/AQAAAAEAAAD5//n/AQAAAAEAAAD4//n/AQAAAAEAAAD4//z/AQAAAAEAAAD4//v/AQAAAAEAAAD4//r/AQAAAAEAAAD7//j/AQAAAAEAAAD8//j/AQAAAAEAAAD6//j/AQAAAAEAAAD+//n/AQAAAAEAAAAJAPb/AQAAAAEAAAAJAPf/AQAAAAEAAAAJAPj/AQAAAAEAAAAJAPn/AQAAAAEAAAAJAPr/AQAAAAEAAAAJAPv/AQAAAAEAAAAJAPz/AQAAAAEAAAAJAP3/AQAAAAEAAAAJAAIAAQAAAAEAAAAJAAMAAQAAAAEAAAAJAAQAAQAAAAEAAAAJAAUAAQAAAAEAAAAJAAYAAQAAAAEAAAAJAAcAAQAAAAEAAAAJAAgAAQAAAAEAAAAJAAkAAQAAAAEAAAAJAP//AQABAAIAAAAJAAAAAQABAAIAAAAJAAEAAQABAAAAAAAJAP7/AQAAAAAAAAD///n/AQAAAAEAAAAAAPn/AQAAAAEAAAABAPn/AQAAAAEAAAACAPj/AQAAAAEAAAABAPj/AQAAAAEAAAD///j/AQAAAAEAAAD+//j/AQAAAAEAAAD9//j/AQAAAAEAAAD8//b/AQAAAAEAAAD9//b/AQAAAAEAAAD+//b/AQAAAAEAAAD///b/AQAAAAEAAAAAAPb/AQAAAAEAAAABAPb/AQAAAAEAAAABAPf/AQAAAAEAAAAAAPf/AQAAAAEAAAD9//f/AQAAAAEAAAD8//f/AQAAAAEAAAABAPr/AQAAAAEAAAA=")

[node name="Player" parent="Background" instance=ExtResource("4_pfkfe")]
script = null

[node name="CanvasModulate" type="CanvasModulate" parent="Background"]
color = Color(0.15, 0.15, 0.15, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jyisb")
metadata/_edit_use_anchors_ = true

[node name="ButtonPlay" type="TextureButton" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -64.0
offset_right = 144.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture_normal = ExtResource("6_jgewu")
texture_hover = ExtResource("7_mcgve")
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="ButtonWebsite" type="TextureButton" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_right = 144.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture_normal = ExtResource("8_ahfes")
texture_hover = ExtResource("9_q3v7w")
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="ButtonAudio" type="TextureButton" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -64.0
offset_right = -80.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture_normal = ExtResource("10_7mhvy")
texture_hover = ExtResource("11_yoqw2")
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="ButtonFullscreen" type="TextureButton" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_right = -80.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture_normal = ExtResource("12_1b8ls")
texture_hover = ExtResource("13_x6dtl")
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="CanvasLayer/ButtonPlay" to="." method="_handle_play"]
[connection signal="pressed" from="CanvasLayer/ButtonWebsite" to="." method="_handle_website"]
[connection signal="toggled" from="CanvasLayer/ButtonAudio" to="." method="_handle_audio"]
[connection signal="pressed" from="CanvasLayer/ButtonFullscreen" to="." method="_handle_fullscreen"]
